third_party/move/move-compiler-v2/tests/more-v1/parser/semicolon_needed.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/semicolon_needed.move:8:9
  │
8 │         assert!(x > 0, 1);
  │         ^^^^^^
  │         │
  │         Unexpected 'assert'
  │         Expected ';'
