third_party/move/move-compiler-v2/tests/more-v1/parser/semicolon_needed.move
module 0xc0ffee::m {
    public fun test(a: bool) {
        let x = if (a) {
            1
        } else {
            2
        } // semicolon is needed, should fail compilation without it
        assert!(x > 0, 1);
    }
}
